Move Draftail tooltips portal closer to the editor to prevent background flickering

--- a/client/src/components/Draftail/Draftail.scss
+++ b/client/src/components/Draftail/Draftail.scss
@@ -71,6 +71,11 @@ $draftail-editor-font-family: $font-serif;
 
 .Draftail-Editor {
     border-radius: 0;
+
+    &__wrapper {
+        // Ensure elements within the editor are positioned according to this container.
+        position: relative;
+    }
 }
 
 // When in a .full container, the editor has a specific appearance
